TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "134071859785792" [label="Start"];
  "134071859785792" -> "134071859785936";
  "134071859785936" [label="Code"];
  "134071859785936" -> "134071859786128";
  "134071859786128" [label="Function"];
  "134071859786128" -> "134071859786320";
  "134071859786128" -> "134071859786464";
  "134071859786128" -> "134071859786608";
  "134071859786320" [label="main"];
  "134071859786464" [label="Parameters"];
  "134071859786608" [label="Code"];
  "134071859786608" -> "134071859786800";
  "134071859786608" -> "134071859787376";
  "134071859786608" -> "134071859787952";
  "134071859786800" [label="Scope"];
  "134071859786800" -> "134071859786992";
  "134071859786992" [label="Declaration"];
  "134071859786992" -> "134071859787184";
  "134071859786992" -> "134071859787328";
  "134071859787184" [label="x"];
  "134071859787328" [label="1"];
  "134071859787376" [label="Scope"];
  "134071859787376" -> "134071859787568";
  "134071859787568" [label="Declaration"];
  "134071859787568" -> "134071859787760";
  "134071859787568" -> "134071859787904";
  "134071859787760" [label="x"];
  "134071859787904" [label="2"];
  "134071859787952" [label="Return"];
  "134071859787952" -> "134071859788144";
  "134071859788144" [label="0"];
}
